continue styling progress bar, overflow issue remains

--- a/app/assets/stylesheets/modules/class_tracks_index.css.scss
+++ b/app/assets/stylesheets/modules/class_tracks_index.css.scss
@@ -129,7 +129,7 @@
   border-top: 1px solid $grey-lt;
   padding: 5px 25px 0;
   .progress-container {
-    min-height: 20px;
+    // min-height: 20px;
   }
   .progress-bar {
     line-height: 1.5;
