--- a/app/assets/stylesheets/modules/progress.css.scss
+++ b/app/assets/stylesheets/modules/progress.css.scss
@@ -2,26 +2,38 @@
 
 .progress-container {
   margin-top: 15px;
+  padding: 20px 0;
   margin-bottom: 0px;
-  min-height: 25px;
-  background-color: #FAFAFA;
-  overflow: hidden;
-  background: lighten($grey-lt, 8%);
-  position: relative;
+  // min-height: 25px;
+  // background-color: #FAFAFA;
   height: 15px;
-  @include border-radius(15px);
-  // box-shadow: inset 0 1px 0 0 rgba(0,0,0,0.1);
 }
 
+.progress-bkgd {
+  margin-top: -10px;
+  @include border-radius(15px);
+  background: lighten($grey-lt, 8%);
+  // overflow: hidden;
+  position: relative;
+  height: 20px;
+  // > .progress-bar:first-of-type> div:first-child{
+  //   border-top-left-radius: 15px;
+  //   border-bottom-left-radius: 15px;
+  // }
+  // > .progress-bar:nth-last-of-type(2)> div:first-child{
+  //   border-top-right-radius: 15px;
+  //   border-bottom-right-radius: 15px;
+  // }
+}
 .progress-bar {
   float: left;
-  // width: 0;
   height: 100%;
   font-size: 13px;
   font-weight: bold;
   line-height: 1.8;
   color: #fff;
   text-align: center;
+  // @include border-radius(15px);
   -webkit-transition: width .6s ease;
   transition: width .6s ease;
 }
@@ -30,7 +42,6 @@
 .progress-bar-warning,
 .progress-bar-success,
 .progress-bar-empty {
-  box-shadow: inset 0 1px 0 0 rgba(0,0,0,0.1);
   height: 100%;
 }
 
@@ -50,33 +61,40 @@
   // color: $color-main;
 }
 
-//progress bar count for teachers on tracks#index
+// progress bar count for teachers on tracks#index
 .track-progress {
   .progress-bar {
     position: relative;
   }
   .progress-bar-label {
-  display: inline-block;
-  padding: 1px 10px;
+  display: none;
+  // padding: 1px 10px;
+  text-align: center;
+  width: 44px;
+  height: 21px;
   background: $color-main;
   @include border-radius(5px);
   position: absolute;
-  top: -10px;
-  right: 0;
+  top: -27px;
+  left: 50%;
+  margin-left: -22px;
   z-index: 400;
-  &:before {
-    content: "";
-    position: absolute;
-    bottom: -3px;
-    left: 42%;
-    width: 8px;
-    height: 8px;
-    background: $color-main;
-    -webkit-transform: rotate(45deg);
-    -moz-transform: rotate(45deg);
-    -o-transform: rotate(45deg);
-    transform: rotate(45deg);
-    @include border-radius(2px);
+    &:before {
+      content: "";
+      position: absolute;
+      bottom: -3px;
+      left: 42%;
+      width: 8px;
+      height: 8px;
+      background: $color-main;
+      -webkit-transform: rotate(45deg);
+      -moz-transform: rotate(45deg);
+      -o-transform: rotate(45deg);
+      transform: rotate(45deg);
+      @include border-radius(2px);
+    }
   }
-  }
+  .progress-bar:hover .progress-bar-label {
+      display: inline-block;
+    }
 }
